# leetcode-python

./: .clinerules  .editorconfig  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .prettierrc.yaml  0169-majority-element-dir  LICENSE  Makefile  README.md  SETUP.md  debug_discussion_query.py  enrich_problem.py  extract_ids.py  extract_problem_ids.py  extract_slugs.py  fmt_errors.md  fmt_out.txt  ids_to_create.txt  ids_to_lists.json  ids_tracks.txt  implementation_plan.md  leetcode  map_slugs_to_ids.py  mkdocs.yml  problem_template.md  pyproject.toml  pytest.ini  queries  regenerate_repo.py  requirements-dev.txt  requirements.txt  scan_types_workflow.md  test_problem.md  union_ids.py
.devcontainer/: Dockerfile  devcontainer.json
archive/: problems  track_0_foundations.yaml  track_10_hard_mix.yaml  track_1_sliding_window.yaml  track_2_two_pointers_advanced.yaml  track_3_binary_search_heaps.yaml  track_4_intervals.yaml  track_6_trees_basics.yaml  track_7_graphs_basics.yaml  track_8_dynamic_programming_i.yaml  track_9_dynamic_programming_ii.yaml  track_neetcode_10_graphs.yaml  track_neetcode_11_advanced_graphs.yaml  track_neetcode_12_1_d_dynamic_programming.yaml  track_neetcode_13_2_d_dynamic_programming.yaml  track_neetcode_14_greedy.yaml  track_neetcode_15_intervals.yaml  track_neetcode_17_bit_manipulation.yaml  track_neetcode_1_d_dynamic_programming.yaml  track_neetcode_2_sliding_window.yaml  track_neetcode_3_stack.yaml  track_neetcode_4_binary_search.yaml  track_neetcode_5_linked_list.yaml  track_neetcode_7_heap_priority_queue.yaml  track_neetcode_9_tries.yaml  (+9 more)
(+6777 files in other folders)
