
[project]
name = "leetcode-python-workspace"
version = "0.1.0"
requires-python = ">=3.11"

[tool.black]
line-length = 100
target-version = ["py311"]
extend-exclude = """
(
  ^old_leetcode/
  | ^venv/
)
"""

[tool.ruff]
line-length = 100
extend-exclude = [
  
  "venv",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "PT", "Q", "SIM"]
ignore = ["E203"]

[tool.ruff.lint.isort]
known-first-party = ["tasks"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_optional = true
